# neurosym-js

./: .gitignore  README.md  activate-and-install.ps1  pyproject.toml  setup-venv.ps1
.github/workflows/: ci.yml
docs/: DEVELOPMENT_PLAN.md  KNOWSHOWGO_HANDOFF.md  KNOWSHOWGO_MODEL.md  KNOWSHOWGO_PLAN.md  KNOWSHOWGO_PROCEDURES.md  LNN_PLN.md  NEUROJSON_HOMOICONIC_DSL.md  NeuroJSON_neurosymjs_design_positioning_v0.1.md  OVERVIEW.md  salvage-knowshowgo.txt
neurojson/: README.md
neurojson/docs/: mapping-to-ksg.md
neurojson/examples/: conflict.json  inhibition.json  wet-grass.json
neurojson/fixtures/v0.1/: expectations.json
neurojson/spec/: neurojson.schema.json  neurojson.v0.1.md
neurosym-js/: README.md  package-lock.json  package.json
neurosym-js/examples/: conflict.ts  inhibit.ts  wet-grass.ts
neurosym-js/src/: index.ts  types.ts
neurosym-js/src/adapters/: ksg.ts
neurosym-js/tests/: compiler-v0-1.test.ts  engine-logic-v0-1.test.ts  engine.test.ts  inference.test.ts  logic-core.test.ts  neuro-graph.test.ts  neurojson-fixtures.test.ts  neurojson-v0-1.test.ts  sampler-v0-1.test.ts  types.test.ts
neurosym.js-standalone/: CHANGELOG.md  package-lock.json  package.json
src/knowshowgo/: __init__.py  api.py  arangodb_client.py  belief_resolver.py  graph.py  inference.py  models.py  neural_predicates.py  neuro_artifacts.py  neuro_service.py  replication.py  vsa.py  working_memory.py
tests/: conftest.py  test_inference.py  test_neural_predicates.py  test_neuro_artifacts.py  test_neuro_service.py  test_replication.py  test_vsa.py  test_working_memory.py
(+6 files in other folders)
