[tool.poetry]
name = "osl-agent"
version = "0.1.0"
description = "OSL agent project"
authors = ["Lehel Kovach <lehel@g.ucla.edu>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31"
langchain = "^1.1.0"
pymongo = "^4.15.5"
fastapi = "^0.123.7"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
